[package]
name = "password_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 0
strip = "debuginfo"

[workspace]
members = ["chess_engine"]

[dependencies]
chess_engine = { path = "./chess_engine" }
build_html = "2.4.0"
chrono = "0.4.38"
moontool = "0.3.0"
opener = { version = "0.7.1", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json", "default-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
